Temperature added to sensors in models, process update label fix in unit details

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ media
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
+.idea/jsLibraryMappings.xml
 
 # Sensitive or high-churn files
 .idea/**/dataSources/
